Fix: On small screen, the modal box is not centered https://github.com/humhub/humhub-internal/issues/950

--- a/static/scss/_mobile.scss
+++ b/static/scss/_mobile.scss
@@ -104,13 +104,6 @@
             }
         }
 
-        // MODAL
-        .modal-dialog {
-            width: calc(100vw - 4px) !important;
-            padding: 0 !important;
-            margin: 2px !important;
-        }
-
         .dropdown-menu {
             max-width: 320px;
 
